Remove the z-index for validation annotation circles to fix issue #18 (#23)
Fix issue #18

--- a/styles/app.less
+++ b/styles/app.less
@@ -176,7 +176,6 @@ a {
   padding: 2px;
   width: 20px;
   height: 20px;
-  z-index: 2;
 
   &:hover > .validation-info {
     display: block;
